# automated-caption-generation-blip

./: .dockerignore  .gitignore  COMMANDS.md  Dockerfile.api  Dockerfile.frontend  Readme.md  app.py  create_project_folders.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
api/: inference.py
cleaning/: data_cleaning.py
configs/: config.yaml
data/: dataset.py
evaluation/: model_evaluation.py
frontend/src/: App.css  App.js
tests/: test_api.py  test_cleaning.py
training/: model_training.py
utils/: logger.py
