[project]
name = "blip-caption-generator"
version = "0.1.0"
description = "Automated image caption generation using a fine-tuned BLIP model"
requires-python = ">=3.10"
dependencies = [
    "torch==2.0.1",
    "torchvision==0.15.2",
    "transformers==4.34.0",
    "Pillow==9.5.0",
    "nltk==3.8.1",
    "numpy<2.0",
    "streamlit==1.21.0",
    "pdf2image==1.16.0",
    "python-dotenv==1.0.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "requests>=2.31.0",
    "slowapi>=0.1.9",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
    "pytest-cov>=7.0.0",
]

[tool.uv]
package = false
